# cxgeorgia

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_baseline.py  0002_core_saas_models.py  0003_add_user_password_hash.py  0004_universal_cases.py  0005_case_comments.py  0006_case_activities.py  0007_case_tags.py  0008_tag_activity_types.py  0009_case_attachments.py  0010_case_sla.py  0011_agent_workforce.py  0012_case_qa.py  0013_customers.py  0014_universal_case_customer_id.py  0015_case_list_views.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: agent_workforce.py  auth.py  case_list_views.py  case_qa.py  case_tags.py  customers.py  deps.py  health.py  operations_dashboard.py  universal_cases.py  workspace_deps.py  workspaces.py
apps/backend/app/core/: config.py  security.py  slugify.py
apps/backend/app/db/: __init__.py  base.py  session.py
apps/backend/app/models/: __init__.py  agent_case_metric.py  agent_shift.py  case_activity.py  case_attachment.py  case_comment.py  case_list_view.py  case_qa_criteria_score.py  case_qa_review.py  case_tag.py  customer.py  enums.py  universal_case.py  user.py  workspace.py  workspace_membership.py
apps/backend/app/schemas/: __init__.py  agent_workforce.py  auth.py  case_activity.py  case_attachment.py  case_comment.py  case_list_view.py  case_qa.py  case_tag.py  customers.py  operations_dashboard.py  universal_case.py  user.py  workspace.py
apps/backend/app/services/: agent_workforce_service.py  case_activity.py  case_attachment_upload.py  case_qa_service.py  (+3 more)
apps/backend/scripts/: check_db_connection.py
apps/backend/tests/: conftest.py  test_agent_workforce.py  test_agent_workforce_api.py  test_agent_workforce_migration.py  test_auth_api.py  test_auth_dependencies.py  test_auth_schemas.py  test_case_activity_api.py  test_case_activity_migration.py  test_case_activity_models.py  test_case_activity_recording.py  test_case_attachment_api.py  test_case_attachment_migration.py  test_case_attachment_models.py  test_case_attachment_storage.py  test_case_comment_api.py  test_case_comment_migration.py  test_case_comment_models.py  test_case_list_view_api.py  test_case_list_view_migration.py  test_case_list_view_models.py  test_case_qa.py  test_case_qa_api.py  test_case_qa_migration.py  test_case_sla.py  test_case_sla_migration.py  test_case_tag_activity_migration.py  test_case_tag_api.py  test_case_tag_migration.py  test_case_tag_models.py  test_core_saas_models.py  test_customer_api.py  test_customer_migration.py  test_customer_models.py  test_db_config.py  test_health.py  test_models_metadata.py  test_operations_dashboard_api.py  test_security_passwords.py  test_security_tokens.py  (+6 more)
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/tests/: __init__.py  test_config.py  test_tasks.py
apps/worker/worker/: __init__.py  celery_app.py
(+151 files in other folders)
