[project]
name = "georgian-cx-backend"
version = "0.1.0"
description = "Georgian CX Platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
