[project]
name = "georgian-cx-backend"
version = "0.1.0"
description = "Georgian CX Platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "asyncpg",
    "bcrypt",
    "email-validator",
    "fastapi",
    "pydantic-settings",
    "python-multipart",
    "python-jose[cryptography]",
    "minio",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
