[project]
name = "georgian-cx-worker"
version = "0.1.0"
description = "Georgian CX Platform — Celery worker (Phase 0 skeleton)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery",
    "redis",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
